[package]
name = "bybit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["gzip", "json"] }
ring = "0.17.8"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
